Expanded Cheat Menu:
- Rearranged some menu items.
- Fixed some funcs for GP.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -3,6 +3,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
+302535920000163,Radius,
 302535920001578,Auto-Attach,
 302535920001579,Activate any auto-attach spots this entity has.,
 302535920000858,Index,
@@ -619,18 +620,14 @@ So we got rid of the auto and stopped off at the Korova for a nightcap.",
 302535920000160,"%s: Freedom for spires!
 Restart to set disabled.",
 302535920000161,%s: Buildings Instant Build,
-302535920000163,Radius,
 302535920001241,Instant Build,
 302535920000164,Storage Amount Of Diner & Grocery,
 302535920000167,Change how much food is stored in them (less chance of starving colonists when busy).,
-302535920000168,Triboelectric Scrubber Radius,
 302535920000169,"Ladies and gentlemen, this is your captain speaking. We have a small problem.
 All four engines have stopped. We are doing our damnedest to get them going again.
 I trust you are not in too much distress.",
-302535920000170,Extend the range of the scrubber.,
-302535920000171,SubsurfaceHeater Radius,
+302535920000170,Change the range of the %s.,
 302535920000172,Some smart quip about heating?,
-302535920000173,Extend the range of the heater.,
 302535920000174,Always Dusty,
 302535920000175,"Buildings will never lose their dust (unless you turn this off, then it'll reset the dust amount).
 Will be overridden by %s.",
@@ -1359,7 +1356,7 @@ Waste: 1,000,000,
 Mechanized: 1,000,000",
 302535920000963,Size,
 302535920001094,"Shows a list of all cargo and allows you to change the price, weight taken up, if it's locked from view, and how many per click.",
-302535920000554,Select an object and click this to display a list of resources.,
+302535920000554,Select an object and click this to display a list of resources (Shows nearest resource to object).,
 302535920000556,Shows a list of updated information about your city.,
 302535920000557,Launch Empty Rocket,
 302535920000558,Launches an empty rocket to Mars.,
@@ -1467,6 +1464,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920000168,Default normal lightmodel list.,
 302535920000973,"Change the value (-1) to an index number from Terrain Textures.
 Open <color green>%s</color> to see all the textures, the tooltips show the texture index.",
 302535920001237,Terrain Type Remap,
@@ -1601,9 +1599,9 @@ And yes Medium is using a higher setting than High...",
 302535920000623,Terrain Type Change,
 302535920000624,"Green or Icy mars? Coming right up!
 (don't forget a light model)",
-302535920000625,Change Light Model,
+302535920000625,Light Model,
 302535920000626,Changes the lighting mode (temporary or permanent).,
-302535920000627,Change Light Model Custom,
+302535920000627,Light Model Custom,
 302535920000628,"Make a custom lightmodel and save it to settings. You still need to use ""Change Light Model"" for permanent.",
 302535920000630,"Change the transparency of UI items (info panel, menu, pins).",
 302535920000631,UI Transparency Mouseover,
