--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1129,7 +1129,7 @@ You need my HelperMod installed to be able to use this.",
 302535920001276,Nothing is deleted unless you check this.,
 302535920000146,Delete Saved Games,
 302535920001273,"Shows a list of saved games, and allows you to delete more than one at a time.",
-302535920001274,This is permanent!,
+302535920001274,This is <color red>permanent!</color>,
 302535920001275,Deleted <color red>%s</color> saved games.,
 302535920000467,Path Markers,
 302535920001175,Debug FX,
