--- a/Mods ChoGGi/View Colony Map/changes.txt
+++ b/Mods ChoGGi/View Colony Map/changes.txt
@@ -1,3 +1,6 @@
+v1.1
+Merged some funcs into Library mod.
+
 v1.0
 Added checkbox to show map location breakthroughs.
 If you close the dialog, it'll open back up.
