--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1070,6 +1070,8 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920000049,Loading Screen Log,
+302535920001621,Be able to see the console log (and other dialogs) during the loading screen.,
 302535920001591,Show Grid Small,
 302535920001592,Small (use Disable to hide).,
 302535920001556,Use the selected object.,
