Expanded Cheat Menu:
- Examine>Added entity/particle name name to attaches list.

### Changed:
- Debug>Examine will try to examine the UI element under the cursor if it can't find an object.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
 302535920001577,Placeholder,
+302535920001622,Particle,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -384,7 +385,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920001549,View BBox,
 302535920001550,Toggle viewing BBox.,
 302535920001545,Going to <color green>%s</color>,
-302535920001544,Attached to: <color green>%s</color>,
+302535920001544,Attached to,
 302535920001535,Set Value,
 302535920001539,Change the value of <color green>%s</color>.,
 302535920001540,Show context menu for <color green>%s</color>.,
