Expanded Cheat Menu:
- Code cleanup

### Added:
- ECM>Game>Lightmodel>List Normal: Changes the list of lightmodels to use (night/day/etc).
- ECM>Game>Lightmodel>List Disaster: Overrides List Normal.

### Removed:
- Game>Light Model Custom: Use the Mod Editor's editor.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
 302535920001577,Placeholder,
-302535920001622,Particle,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -344,6 +343,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001622,Particle,
 302535920001620,"Click to toggle between Viewing/Dumping the Text or Object.
 <color green>Text</color> is what you see, <color green>Object</color> is the text created from ValueToLuaCode(obj).",
 302535920000046,Dumps Text/Object to <color green>%slogs\DumpedExamine.lua</color>.,
@@ -1466,9 +1466,13 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920001627,This is only visual; this won't affect the game state (unless something uses the list to check).,
+302535920001623,List Normal,
+302535920001624,Changes the list of lightmodels to use (night/day/etc).,
+302535920001625,List Disaster,
+302535920001626,Overrides List Normal.,
 302535920001618,Map Data (Breakthroughs),
 302535920001619,This will take <color red>longer</color> (about 15s).,
-302535920000168,Default normal lightmodel list.,
 302535920000973,"Change the value (-1) to an index number from Terrain Textures.
 Open <color green>%s</color> to see all the textures, the tooltips show the texture index.",
 302535920001237,Terrain Type Remap,
@@ -1517,24 +1521,10 @@ Difficulty Challenge/Named Location may not work on some saves (best to start a 
 302535920000645,Higher Shadow Distance,
 302535920001238,Removes rocks for that smooth map feel.,
 302535920000803,For rules separate with spaces: Hunger ColonyPrefab (or leave blank for none).,
-302535920000110,Min,
-302535920000941,Max,
 302535920000974,Map default: <color green>%s</color>,
-302535920000975,Custom Lightmodel,
-302535920000976,"Use double right click to test without closing dialog
-
-Some settings can't be changed in the editor, but you can manually add them in the settings file (type ex(DataInstances.Lightmodel) and use dump obj).",
-302535920000977,Semi-Permanent,
-302535920000978,Make it stay at selected light model till reboot (use Misc>Change Light Model for Permanent).,
-302535920000980,Opens up the list of premade styles so you can start with the settings from one.,
-302535920000981,Choose to this remove Permanent setting.,
-302535920000983,"Custom Lightmodel made with ""Change Light Model Custom"".",
-302535920000985,Select Lightmodel Preset,
-302535920000986,Change Lightmodel,
 302535920000987,If you used Permanent; you must choose default to remove the setting (or it'll set the lightmodel next time you start the game).,
 302535920000988,Permanent,
 302535920000989,Make it stay at selected light model all the time (including reboots).,
-302535920000990,"Open this style in ""Change Light Model Custom"".",
 302535920000991,Double right-click <right_click> to preview lightmodel without closing dialog.,
 302535920000993,Build menu,
 302535920000994,Console logging text,
@@ -1603,10 +1593,7 @@ And yes Medium is using a higher setting than High...",
 302535920000623,Terrain Type Change,
 302535920000624,"Green or Icy mars? Coming right up!
 (don't forget a light model)",
-302535920000625,Light Model,
 302535920000626,Changes the lighting mode (temporary or permanent).,
-302535920000627,Light Model Custom,
-302535920000628,"Make a custom lightmodel and save it to settings. You still need to use ""Change Light Model"" for permanent.",
 302535920000630,"Change the transparency of UI items (info panel, menu, pins).",
 302535920000631,UI Transparency Mouseover,
 302535920000632,Toggle removing transparency on mouseover.,
