Expanded Cheat Menu:
### Added:
- Examine>Context menu (functions)>Function Results: Continually call a function while showing results in an examine dialog.
- Call it manually with MonitorFunc ex: MonitorFunc(RealTime).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -3,6 +3,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
+302535920000110,Function Results,
 302535920000163,Radius,
 302535920001578,Auto-Attach,
 302535920001579,Activate any auto-attach spots this entity has.,
@@ -343,6 +344,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920000168,Continually call this function while showing results in an examine dialog.,
 302535920001622,Particle,
 302535920001620,"Click to toggle between Viewing/Dumping the Text or Object.
 <color green>Text</color> is what you see, <color green>Object</color> is the text created from ValueToLuaCode(obj).",
