Expanded Cheat Menu:
- Added an Exec Func to Examine>Context menu (func): it'll copy the func name to the exec code line.
- Changed the Toggle Hex Shape func to use the hexspot entity instead of a polyline (quicker and no flicker when there's a bunch of them).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,7 @@
 ID,Text,Translation,Old Translation,Gender
 302535920001577,Placeholder,
+302535920000625,Exec Func,
+302535920000627,Copy func name to exec code line.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
