--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
 302535920001577,Placeholder,
-302535920000625,Exec Func,
-302535920000627,Copy func name to exec code line.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -346,6 +344,11 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920000628,"Close the examine dialog
+Hold <color green>Shift</color> to close all ""grouped"" examine dialogs (any ex dlg opened from an ex dlg).
+Hold <color green>Ctrl</color> to close <color red>all</color> ECM dialogs.",
+302535920000625,Exec Func,
+302535920000627,Show func name in exec code line.,
 302535920000168,Continually call this function while showing results in an examine dialog.,
 302535920001622,Particle,
 302535920001620,"Click to toggle between Viewing/Dumping the Text or Object.
