Expanded Cheat Menu:
### Added:
- ECM>Resources>Rare Metals Price (M): Amount of Funding received by exporting one unit of Rare Metals.

### Changed:
- Some menu items to use translated text instead of mine.

Mods:
Notification Pause 0.6:
It was pausing from Drone Heavy Load notification.
Stop Current Disasters:
Green Planet.
Fix: RC Commander Drone Freeze: Fix for this bug:
https://forum.paradoxplaza.com/forum/index.php?threads/surviving-mars-game-freezes-when-deploying-drones-from-rc-commander-after-one-was-destroyed.1168779/



ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -3,6 +3,10 @@ ID,Text,Translation,Old Translation,Gender
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
+302535920000388,Works after colonist idle.,
+302535920000390,Activated when colonist changes job.,
+302535920000400,Works after daily update.,
+302535920000405,Works after in-game hour.,
 302535920000110,Function Results,
 302535920000163,Radius,
 302535920001578,Auto-Attach,
@@ -532,6 +536,21 @@ Press Enter to refresh list (update names).
 Double left-click <left_click> selected item to open in new editor.",
 302535920000102,Use to change values of selected list item.,
 302535920000103,Edit Value,
+302535920000941,Funding Per Rare Metal Export,
+302535920000850,Change Resupply Settings,
+302535920000719,Add Orbital Probes,
+302535920000720,Add more probes.,
+302535920000726,Add more funding (or reset back to 500 M).,
+302535920001187,Add Probes,
+302535920000727,Fill Selected Resource,
+302535920000728,Fill the selected/moused over object's resource(s),
+302535920001188,%s: om nom nom nom nom,
+302535920001189,Passengers,
+302535920001190,Set Food Per Rocket Passenger,
+302535920001194,Use edit box to enter amount of prefabs to add.,
+302535920001195,Reset to 500 M,
+302535920001196,"If your funds are a negative value, then you added too much.
+Fix with: %s",
 302535920001407,Rotate During Placement,
 302535920001408,Allow you to rotate all buildings.,
 302535920001398,Remove Sponsor Limits,
@@ -620,7 +639,6 @@ We were all feeling a bit shagged and fagged and fashed,
 it having been an evening of some small energy expenditure, O my brothers.
 So we got rid of the auto and stopped off at the Korova for a nightcap.",
 302535920000156,%s: Aliens? We gotta deal with aliens too?,
-302535920000158,%s: No no I said over there.,
 302535920000159,Unlimited Wonders,
 302535920000160,"%s: Freedom for spires!
 Restart to set disabled.",
@@ -643,7 +661,6 @@ Will be overridden by %s.",
 302535920000180,Unlock Locked Buildings,
 302535920000181,"Shows a list of buildings you can unlock.
 This doesn't apply to sponsor limited ones; see Toggles>%s.",
-302535920000182,Pipes Pillars Spacing,
 302535920000183,Only place Pillars at start and end.,
 302535920000184,Unlimited Connection Length,
 302535920000185,"No more length limits to pipes, cables, and passages.",
@@ -677,7 +694,6 @@ Works on any building that produces.",
 302535920000209,Building maintenance points reverse (takes away instead of adding).,
 302535920000210,Moisture Vaporator Penalty,
 302535920000211,Disable penalty when Moisture Vaporators are close to each other.,
-302535920000213,Remove Threshold for failing crops (crops won't fail).,
 302535920000214,Cheap Construction,
 302535920000215,Build with minimal resources.,
 302535920000216,Building Damage Crime,
@@ -723,7 +739,6 @@ This will switch to a new map.",
 302535920001372,Change the number on the end to fire that amount (ex: <color green>%s25</color>).,
 302535920001373,Lightning Strike,
 302535920001374,LightningStrike,
-302535920001342,Change Outsource Limit,
 302535920001343,How many times you can outsource in a row.,
 302535920000292,Resets sponsor points to default for that sponsor,
 302535920000329,Scan all anomalies.,
@@ -764,7 +779,6 @@ To unlock a single building: See ECM>Buildings>%s.",
 302535920000352,Complete item currently being researched.,
 302535920000354,Add a specified amount of research points.,
 302535920000355,Outsourcing For Free,
-302535920000356,Outsourcing is free to purchase (over n over).,
 302535920000357,Set Amount Of Breakthroughs Allowed,
 302535920000358,How many breakthroughs are allowed to be unlocked?,
 302535920000359,Breakthroughs From OmegaTelescope,
@@ -853,15 +867,10 @@ Best hope you picked India as your Mars sponsor...",
 302535920000317,Select Unlock or Research then select the tech you want. Most mystery tech is locked to that mystery.,
 302535920000319,Just unlocks in the research tree.,
 302535920000320,Unlocks and researchs.,
-302535920001589,Outside Workplace Sanity Penalty,
-302535920001590,"Remove the ""Worked outside the Dome"" penalty.
-Activated when colonist changes job.",
-302535920001446,Performance Penalty Connected Dome,
-302535920001451,"Disable performance penalty for colonists working in another connected dome.
-Activated when colonist changes job.",
+302535920001589,Disable creation of renegades.,
+302535920001590,"Remove the ""Worked outside the Dome"" penalty.",
 302535920000375,The Soylent Option,
 302535920000212,Work,
-302535920000444,Set Stats,
 302535920000446,Colonist Death Age,
 302535920000992,Building Traits,
 302535920000912,Penalty,
@@ -927,7 +936,6 @@ Therefore a stale piece of bread is better than a big juicy steak.",
 302535920000785,%s: No Shame,
 302535920000786,"%s:We've all seen them, on the playground, at the store, walking on the streets.",
 302535920000787,"%s: Say, ""Small umbrella, small umbrella.""",
-302535920000788,%s: You never know what you're gonna get.,
 302535920000789,"%s: There's a voice that keeps on calling me.
 Down the road is where I'll always be.
 Maybe tomorrow, I'll find what I call home.
@@ -980,7 +988,6 @@ Max: 100000 (choose fill to reset),
 
 Warning: Disable births or else...",
 302535920000838,Colonist Move Speed,
-302535920000839,Colonist gravity is now <color green>%s</color>.,
 302535920000840,Set Colonist Gravity,
 302535920000842,Select a workplace or training building.,
 302535920000843,Toggled traits,
@@ -1006,53 +1013,21 @@ Warning: Disable births or else...",
 302535920000384,Fires everyone from every job.,
 302535920000385,Set All Work Shifts,
 302535920000386,Set all shifts on or off (able to cancel).,
-302535920000387,Colonists Avoid Fired Workplace,
-302535920000388,"After being fired, Colonists won't avoid that Workplace searching for a Workplace.
-Works after colonist idle.",
-302535920000389,Performance Penalty Non-Specialist,
-302535920000390,"Disable performance penalty for non-Specialists.
-Activated when colonist changes job.",
-302535920000391,Change how many hexes colonists search outside their dome when looking for a Workplace.,
-302535920000392,Outside Workplace Radius,
 302535920000393,Add Specialization To All,
 302535920000394,If Colonist has no Specialization then add a random one,
-302535920000395,Min Comfort Birth,
-302535920000396,Change the limit on birthing comfort (more/less babies).,
 302535920000397,Visit Fail Penalty,
-302535920000398,Disable comfort penalty when failing to satisfy a need via a visit.,
 302535920000399,Renegade Creation Toggle,
-302535920000400,"Disable creation of renegades.
-Works after daily update.",
 302535920000401,Set Renegade Status,
 302535920000402,Morale Always Max,
 302535920000403,"Colonists always max morale (will effect birthing rates).
 Only works on colonists that have yet to spawn (maybe).",
-302535920000404,See Dead Sanity Damage,
-302535920000405,"Disable colonists taking sanity damage from seeing dead.
-Works after in-game hour.",
-302535920000406,No Home Comfort Damage,
-302535920000407,"Disable colonists taking comfort damage from not having a home.
-Works after in-game hour.",
 302535920000408,Chance Of Sanity Damage,
-302535920000409,"Disable colonists taking sanity damage from certain events.
-Works after in-game hour.",
+302535920000409,Disable colonists taking sanity damage from certain events.,
 302535920000410,University Grad Remove Idiot,
 302535920000411,When colonist graduates this will remove idiot trait.,
 302535920000412,Chance Of Negative Trait,
-302535920000413,"Disable chance of getting a negative trait when Sanity reaches zero.
-Works after colonist idle.",
-302535920000415,"Disable chance of suicide when Sanity reaches zero.
-Works after colonist idle.",
-302535920000416,Colonists Suffocate,
-302535920000417,"Disable colonists suffocating with no oxygen.
-Works after in-game hour.",
 302535920000418,Colonists Starve,
-302535920000419,"Disable colonists starving with no food.
-Works after colonist idle.",
 302535920000420,Positive Playground,
-302535920000421,100% Chance to get a perk (when grown) if colonist has visited a playground as a child.,
-302535920000422,Project Morpheus Positive Trait,
-302535920000423,100% Chance to get positive trait when Resting and ProjectMorpheus is active.,
 302535920000424,Set Age New,
 302535920000425,This will make all newly arrived and born colonists a certain age.,
 302535920000426,Set Age,
@@ -1228,7 +1203,6 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000746,added,
 302535920000917,packed,
 302535920000880,Set Rover Charge Radius,
-302535920000883,%s: I can see for miles and miles.,
 302535920000884,Set Rover Work Radius,
 302535920000886,Set DroneHub Work Radius,
 302535920000889,base speed,
@@ -1241,10 +1215,7 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000898,Pack Drones,
 302535920000899,Check this to pack drone(s) into prefabs (number can be higher than attached drones).,
 302535920000901,Set Drone Factory Build Speed,
-302535920000904,%s: More where that came from,
-302535920000905,%s: Slight of hand,
 302535920000907,"%s: Well, if jacking on'll make strangers think I'm cool, I'll do it!",
-302535920000908,%s: You know what they say about leaky pipes.,
 302535920000909,"If you set this amount larger then a building's ""Storage"" amount then the drones will NOT pick up storage (See: Fixes>%s).",
 302535920000910,Somewhere above 1000 will delete the save (when it's full),
 302535920000911,Drones can carry <color green>%s</color> items.,
@@ -1252,20 +1223,15 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000915,Max: 1000.,
 302535920000916,DroneHubs can control <color green>%s</color> drones.,
 302535920000918,Set DroneHub Drone Capacity,
-302535920000919,RC gravity is now <color green>%s</color>.,
 302535920000920,Set RC Gravity,
 302535920000921,RC Rovers can control <color green>%s</color> drones.,
 302535920000923,Set Drone Gravity,
 302535920000924,Set RC Rover Drone Capacity,
 302535920000925,somewhere above 2000 will delete the save (when it's full),
-302535920000926,RC Transport capacity is now <color green>%s</color>.,
 302535920000927,Set RC Transport Capacity,
 302535920000928,somewhere above 1000 may delete the save (when it's full),
-302535920000929,Shuttle storage is now <color green>%s</color>.,
 302535920000930,Set Cargo Shuttle Capacity,
-302535920000931,Shuttle speed is now <color green>%s</color>.,
 302535920000932,Set Cargo Shuttle Speed,
-302535920000934,ShuttleHub shuttle capacity is now <color green>%s</color>.,
 302535920000505,Work Radius RC Rover,
 302535920000506,Change RC Rover drone radius (this ignores slider).,
 302535920000507,Work Radius DroneHub,
@@ -1281,19 +1247,10 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000519,Drone Battery Infinite,
 302535920000521,Drone Build Speed,
 302535920000522,Instant build/repair when resources are ready.,
-302535920000526,Faster/Slower Drone Recharge.,
 302535920000527,Drone Repair Supply Leak Speed,
-302535920000528,Faster Drone fix supply leak.,
-302535920000529,Drone Carry Amount,
 302535920000530,Change amount drones can carry.,
-302535920000531,Drones Per Drone Hub,
-302535920000532,Change amount of drones Drone Hubs will command.,
-302535920000533,Drones Per RC Rover,
-302535920000534,Change amount of drones RC Rovers will command.,
 302535920000536,Change amount of shuttles per shuttlehub.,
-302535920000537,Set Capacity,
 302535920000538,Change capacity of shuttles.,
-302535920000539,Set Speed,
 302535920000540,Change speed of shuttles.,
 302535920000541,RC Set Charging Distance,
 302535920000542,Distance from power lines that rovers can charge.,
@@ -1316,21 +1273,6 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000567,Worker Capacity,
 302535920001272,Updated,
 302535920000565,Storage Mechanized Depots Temp,
-302535920000850,Change Resupply Settings,
-302535920000719,Add Orbital Probes,
-302535920000720,Add more probes.,
-302535920000722,Change the amount of Food supplied with each Colonist arrival.,
-302535920000726,Add more funding (or reset back to 500 M).,
-302535920000727,Fill Selected Resource,
-302535920000728,Fill the selected/moused over object's resource(s),
-302535920001187,Add Probes,
-302535920001188,%s: om nom nom nom nom,
-302535920001189,Passengers,
-302535920001190,Set Food Per Rocket Passenger,
-302535920001194,Use edit box to enter amount of prefabs to add.,
-302535920001195,Reset to 500 M,
-302535920001196,"If your funds are a negative value, then you added too much.
-Fix with: %s",
 302535920001269,Amount Per Click,
 302535920001270,Weight Per Item,
 302535920001271,Price Per Item,
@@ -1342,7 +1284,6 @@ Fix with: %s",
 302535920000942,Are you sure you want to launch an empty rocket?,
 302535920000943,Launch rocket to Mars.,
 302535920000944,Yamato Hasshin!,
-302535920000945,%s: I can still see some space...,
 302535920000946,Set Rocket Cargo Capacity,
 302535920000947,Instant,
 302535920000948,Original,
@@ -1369,11 +1310,7 @@ Mechanized: 1,000,000",
 302535920000556,Shows a list of updated information about your city.,
 302535920000557,Launch Empty Rocket,
 302535920000558,Launches an empty rocket to Mars.,
-302535920000559,Cargo Capacity,
-302535920000560,Change amount of storage space in rockets.,
 302535920000561,Travel Time,
-302535920000562,Change how long to take to travel between planets.,
-302535920000564,Change how many colonists can arrive on Mars in a single Rocket.,
 302535920000566,Allow the temporary storage to hold 100 instead of 50 cubes.,
 302535920000568,"Set worker capacity of buildings of selected type, also applies to newly placed ones.",
 302535920000569,Building Capacity,
@@ -1845,7 +1782,6 @@ Current: <color green>%s</color>",
 302535920000706,Instant Colony Approval,
 302535920000707,Make your colony instantly approved (can be called before you summon your first victims).,
 302535920000708,Meteor Damage,
-302535920000709,Disable Meteor damage (colonists?).,
 302535920000710,Change Logo,
 302535920000711,Change the logo for anything that uses the logo.,
 302535920000713,Switch to a different sponsor.,
