--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
 302535920001577,Placeholder,
+302535920000389,The amount used when a button is pressed (default: %s).,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
