Expanded Cheat Menu:
- Working on 3D Manipulator.

Omega Unlocks All:
Omega Telescope will unlock all breakthroughs instead of three.
Unlimited Wonders:
Build as many wonders as you want.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
 302535920001577,Placeholder,
-302535920000389,The amount used when a button is pressed (default: %s).,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -95,6 +94,13 @@ ID,Text,Translation,Old Translation,Gender
 302535920000033,Post a request on Nexus or Github or send an email to: <color green>%s</color>,
 302535920001092,Pins,
 302535920000004,Dump,
+302535920000389,The amount used when a button is pressed (default: %s).,
+302535920000391,Roll,
+302535920000392,Pitch,
+302535920000395,Yaw,
+302535920000396,"Store the position, roll, pitch, and yaw.",
+302535920000398,"Restore the position, roll, pitch, and yaw.",
+302535920000404,"Clear the position, roll, pitch, and yaw.",
 302535920001503,Map Name,
 302535920001505,°,
 302535920001504,Named,
