Expanded Cheat Menu:
### Changed:
- Console Window:
- > Renamed Copy Log Text to View Log Text.
- > Added a Clipboard button (copies log to clipboard).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
 302535920001577,Placeholder,
+302535920000406,Copy text to the clipboard.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -342,7 +343,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920001091,Flushes log to disk and displays it.,
 302535920001152,Clear out the console log (F9 also works).,
 302535920001154,Displays the log text in a window you can copy sections from.,
-302535920000563,Copy Log Text,
+302535920000563,View Log Text,
 302535920001120,Console Window,
 302535920001080,Console history items (mouse-over to see code).,
 302535920001089,Settings & Commands for the console.,
