Expanded Cheat Menu:
### Changed:
- Console>~obj will show all results instead of only the first one (in a table).
- Renamed imgview/txtview to OpenImageViewer/OpenTextViewer.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -222,9 +222,9 @@ You can copy and paste numbers if you want.",
 
 <color green>@@</color><color yellow>EntityData</color> prints type of obj, use <color red>type(obj)</color> in lua code.
 
-<color green>%</color><color yellow>""UI/Vignette.tga""</color> opens image in image viewer, use <color red>imgview(image)</color> in lua code.
+<color green>%</color><color yellow>""UI/Vignette.tga""</color> opens image in image viewer, use <color red>OpenImageViewer(image)</color> in lua code.
 
-<color green>^</color><color yellow>""text string""</color> opens text in text editor, use <color red>txtview(string)</color> in lua code.
+<color green>^</color><color yellow>""text string""</color> opens text in text editor, use <color red>OpenTextViewer(string)</color> in lua code.
 
 <color green>$</color><color yellow>123</color> or <color green>$</color><color yellow>EffectDeposit.display_name</color> prints translated string, use <color red>trans(obj)</color> in lua code.
 
